--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -1,11 +1,11 @@
-name: Django CI
+name: Random Walk E2E
 
 on:
   schedule:
     - cron: '0 0 * * *'
     - cron: '0 12 * * *'
   pull_request:
-    branches: [ "Master" ]
+    branches: [ "master" ]
 
 jobs:
   backend-job:
