--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -55,6 +55,18 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/saved_private_key
           chmod 600 ~/.ssh/saved_private_key
 
+      - name: Upload SSH private key
+        uses: actions/upload-artifact@v3
+        with:
+          name: ssh-private-key
+          path: ~/.ssh/saved_private_key
+
+      - name: Download SSH private key
+        uses: actions/download-artifact@v3
+        with:
+          name: ssh-private-key
+          path: ~/.ssh/
+
       - name: Build and Test Java Project
         run: |
           chmod +x gradlew
