RANDOMWALK-48 | add serts ignore

--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew clean --no-daemon
-          ./gradlew test --no-daemon
+          ./gradlew test "-Dcom.sun.net.ssl.checkRevocation=false" --no-daemon
         continue-on-error: true
 
       - name: Generate test report
