--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -9,14 +9,14 @@ on:
   push:
 
 jobs:
-  backend-job:
+  checkout-repo:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-  java-job:
+  build-proj-and-run-tests:
     runs-on: ubuntu-latest
     env:
       RW_DB_URL: ${{ secrets.RW_DB_URL }}
