--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ datasource:
     username: ${RW_CLUB_DB_USERNAME}
     password: ${RW_CLUB_DB_PASSWORD}
 api:
-  test-token: ${TEST_TOKEN}
+  token: ${TEST_TOKEN}
   auth-service:
     http-endpoint:
       host: https://random-walk.ru:44424/auth
@@ -41,4 +41,7 @@ api:
   google-oauth2:
     email: ${GOOGLE_USER_EMAIL}
     password: ${GOOGLE_USER_PASSWORD}
+spring:
+  config:
+    import: classpath:users.yml
 
