RANDOMWALK-166 | fix pipeline

--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -60,10 +60,11 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew clean --no-daemon
+          echo "Running tests with tag: ${{ github.event.inputs.testTag }}"
           if [[ -z "${{ github.event.inputs.testTag }}" ]]; then
             ./gradlew test --no-daemon
           else
-            ./gradlew test -PincludeTags="*@${{ github.event.inputs.testTag }}" --no-daemon
+            ./gradlew test -PincludeTags=${{ github.event.inputs.testTag }} --no-daemon
           fi
         continue-on-error: true
 
