--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -11,7 +11,7 @@ on:
       testTag:
         description: Тег для запуска тестов по определенному сервису
         required: false
-        default: ""
+        default: "all"
         type: choice
         options:
           - all
@@ -68,7 +68,7 @@ jobs:
           chmod +x gradlew
           ./gradlew clean --no-daemon
           echo "Running tests with tag: ${{ github.event.inputs.testTag }}"
-          if [[ {{ github.event.inputs.testTag }} == "all" || -z "${{ github.event.inputs.testTag }}" ]]; then
+          if [[ "${{ github.event.inputs.testTag }}" == "all" ]]; then
             ./gradlew test --no-daemon
           else
             ./gradlew test -PincludeTags=${{ github.event.inputs.testTag }} --no-daemon
