--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -76,14 +76,11 @@ jobs:
         continue-on-error: true
 
       - name: Generate test report
+        run: | 
+          ./gradlew allureReport
+
+      - name: Upload test report
         uses: actions/upload-artifact@v4
         with:
-          name: test-report
-          path: ./build/reports/tests/test
-
-
-
-
-
-
-
+          name: allure-report
+          path: ./build/reports/allure-report/allureReport
