--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -75,9 +75,12 @@ jobs:
           fi
         continue-on-error: true
 
-      - name: Upload Allure Report
-        uses: market/allure-report-action@v7
-        with:
-          allure_results: ./build/reports/allure-report/allureReport
-          allure_report: ./allure-report
+      - name: Generate test report
+        run: | 
+          ./gradlew allureReport
 
+      - name: Upload test report
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: ./build/reports/allure-report
