--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -75,6 +75,12 @@ jobs:
           fi
         continue-on-error: true
 
+      - name: Generate test report
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: ./build/reports/tests/test
+
       - name: Generate allure report
         uses: simple-elf/allure-report-action@master
         if: always()
