--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,7 +48,9 @@ api:
     request-path: /graphql
 spring:
   config:
-    import: classpath:users.yml
+    import:
+    - classpath:users.yml
+    - classpath:clubs.yml
 test-management-system:
   token: ZlJPWVRzZExIME5nbzQ3VzR0
 
