--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -77,6 +77,7 @@ jobs:
 
       - name: Generate test report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: test-report
           path: ./build/reports/tests/test
@@ -91,6 +92,7 @@ jobs:
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: allure-report
           path: ./allure-report
