--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -79,7 +79,7 @@ jobs:
           if [[ "${{ github.event.inputs.testTag }}" == "all" ]]; then
           {
           echo "Текущая дата = $CURRENT_DATE"
-            ./gradlew test --no-daemon -DtmsUrl=$TMS_URL -DtmsPrivateToken=$TMS_PRIVATE_TOKEN -DtmsProjectId=$TMS_PROJECT_ID -DtmsConfigurationId=$TMS_CONFIGURATION_ID \
+            ./gradlew test -DtmsUrl=$TMS_URL -DtmsPrivateToken=$TMS_PRIVATE_TOKEN -DtmsProjectId=$TMS_PROJECT_ID -DtmsConfigurationId=$TMS_CONFIGURATION_ID \
               -DtmsAdapterMode=2 -DtmsTestRunName="Random Walk Regress $CURRENT_DATE" -DtmsAutomaticCreationTestCases=$TMS_AUTO_CREATE_TEST_CASES \
                 -DtmsCertValidation=$TMS_CERT_VALIDATION 
           }
