--- a/.github/workflows/e2e-tests-pipeline.yml
+++ b/.github/workflows/e2e-tests-pipeline.yml
@@ -85,13 +85,14 @@ jobs:
           echo "$TMS_URL"
           if [[ -n "${{ github.event.inputs.tmsRunId }}" ]]; then
             echo "Custom TMS Run ID detected"
+            echo "${{ github.event.inputs.tmsRunId }}"
             ./gradlew test \
             -PincludeTags=${{ github.event.inputs.testTag }} \
             -DtmsUrl=$TMS_URL \
             -DtmsPrivateToken=$TMS_PRIVATE_TOKEN \
             -DtmsProjectId=$TMS_PROJECT_ID \
             -DtmsConfigurationId=$TMS_CONFIGURATION_ID \
-            -DtmsAdapterMode=0 \
+            -DtmsAdapterMode=1 \
             -DtmsTestRunId=${{ github.event.inputs.tmsRunId }} \
             -DtmsTestRunName="Random Walk Regress $CURRENT_DATE" \
             -DtmsAutomaticCreationTestCases=$TMS_AUTO_CREATE_TEST_CASES \
